kubernetes/configs/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "${app_product}-${app_label}-${profile}"
  namespace: "${namespace}"
  labels:
    app : "${app_product}-${app_label}-${profile}"
    product : "${app_product}"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${app_product}-${app_label}-${profile}
      product : "${app_product}"
  template:
    metadata:
      labels:
        app: ${app_product}-${app_label}-${profile}
        product : "${app_product}"
    spec:
      containers:
      - name: "${app_product}-${app_label}-${profile}"
        imagePullPolicy: Always
        image: ${imagedocker}
        ports:
        - name: web
          containerPort: 8080
          protocol: TCP
        - name: hazelcast
          containerPort: 5701
          protocol: TCP
        resources:
          limits:
            cpu: "${cpu_limit}"
            memory: "${mem_limit}"
          requests:
            cpu: "${cpu_request}"
            memory: "${mem_request}"
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /orchestrator/actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 90
        readinessProbe:
          failureThreshold: 6
          httpGet:
            path: /orchestrator/actuator/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 90
      imagePullSecrets:
      - name: ${imagepuller}
      serviceAccountName: orchestratorsaccnt
